[gd_scene load_steps=14 format=3 uid="uid://b8exv6qda8frv"]

[ext_resource type="Script" uid="uid://w7rusoaqhu5r" path="res://ship/ship_main.gd" id="1_58i1j"]
[ext_resource type="PackedScene" uid="uid://b54c7ad6cogrm" path="res://ship/ship_ui.tscn" id="2_0uobw"]
[ext_resource type="Texture2D" uid="uid://cr7usmfo6apt8" path="res://ship/Mini Pixel Pack 3/UI objects/GAME_OVER (72 x 8).png" id="3_v1qd5"]
[ext_resource type="Texture2D" uid="uid://o6gwbftsnc8c" path="res://ship/Mini Pixel Pack 3/UI objects/START (48 x 8).png" id="4_qm3bp"]
[ext_resource type="Texture2D" uid="uid://c58h7js0ganhf" path="res://sprites/landschap van boven.png" id="5_i2brr"]
[ext_resource type="PackedScene" uid="uid://b32476hejmrnj" path="res://ship/player_ship.tscn" id="6_3anf6"]
[ext_resource type="AudioStream" uid="uid://dhxxm3c8om7tr" path="res://sounds/blast.wav" id="7_kg5dh"]
[ext_resource type="AudioStream" uid="uid://cdtbx6t5bpfi2" path="res://music/3-11-24 game music 2024-12-22 2105.wav" id="9_wgt0d"]

[sub_resource type="Animation" id="Animation_frim2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(2.08165e-12, 2.08165e-12, 240, 320)]
}

[sub_resource type="Animation" id="Animation_lmpjc"]
resource_name = "new_animation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 240, 160), Rect2(0, -640, 240, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d33qh"]
_data = {
&"RESET": SubResource("Animation_frim2"),
&"new_animation": SubResource("Animation_lmpjc")
}

[sub_resource type="Resource" id="Resource_le8m6"]
metadata/__load_path__ = "res://Camera2D.gd"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uf0tv"]

[node name="Main" type="Node2D"]
script = ExtResource("1_58i1j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("2_0uobw")]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="TextureRect" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
texture = ExtResource("3_v1qd5")

[node name="Start" type="TextureButton" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_qm3bp")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(120, 86)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_i2brr")
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 240, 320)

[node name="Player" parent="." instance=ExtResource("6_3anf6")]
position = Vector2(120, 120)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("7_kg5dh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d33qh")
}
autoplay = "new_animation"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(120, 80)
script = SubResource("Resource_le8m6")
noise = SubResource("FastNoiseLite_uf0tv")

[node name="EnemyAnchor" type="Node2D" parent="."]

[node name="3-11-24GameMusic2024-12-222105" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wgt0d")
autoplay = true

[connection signal="pressed" from="CanvasLayer/CenterContainer/Start" to="." method="_on_start_pressed"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="shield_changed" from="Player" to="CanvasLayer/UI" method="update_shield"]
